// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<UnevenItemsScrollSlider /> <UnevenItemsScrollSlider /> - props should render correctly with additional props 1`] = `
<div
  className="slider dummyClassName"
  onScroll={[Function]}
>
  <div
    className="wrapper"
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
  >
    <div
      className="slide"
      key=".$0"
      style={Object {}}
    >
      First slide
    </div>
    <div
      className="slide"
      key=".$1"
      style={Object {}}
    >
      Second slide
    </div>
    <div
      className="slide"
      key=".$2"
      style={Object {}}
    >
      Third slide
    </div>
    <div
      className="slide"
      key=".$3"
      style={Object {}}
    >
      Fourth slide
    </div>
  </div>
</div>
`;

exports[`<UnevenItemsScrollSlider /> <UnevenItemsScrollSlider /> - props should render correctly with the required props 1`] = `
<div
  className="slider"
  onScroll={[Function]}
>
  <div
    className="wrapper"
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
  >
    <div
      className="slide"
      key=".$0"
      style={Object {}}
    >
      First slide
    </div>
    <div
      className="slide"
      key=".$1"
      style={Object {}}
    >
      Second slide
    </div>
    <div
      className="slide"
      key=".$2"
      style={Object {}}
    >
      Third slide
    </div>
    <div
      className="slide"
      key=".$3"
      style={Object {}}
    >
      Fourth slide
    </div>
  </div>
</div>
`;
